--- a/tmux.conf
+++ b/tmux.conf
@@ -46,6 +46,11 @@ bind-key Right swap-window -d -t +1
 set-option -g display-time 1000
 
 ### <List of plugins>
+
+# Tmux Plugin Manager: https://github.com/tmux-plugins/tpm
+# C-a + I - install plugins
+# C-a + U - update plugins
+# C-a + alt/option + u - remove/uninstall plugins not on plugin list
 set -g @plugin 'tmux-plugins/tpm'
 
 # github.com/tmux-plugins/tmux-resurrect
