--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,13 +5,11 @@
 - clean: ['~']
 
 - link:
+    ~/.emacs: emacs
     ~/.gitconfig: gitconfig
     ~/.tmux.conf: tmux.conf
     ~/.zprofile: zprofile
     ~/.zshrc: zshrc
-    # TODO figure out how to synchronize tmux plugin dir across machines — or
-    # should I even be trying to do this?
-    # ~/.tmux: tmux
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
