--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,16 @@
-##########     NOTES     ##########
-# Equally balance panes in current window:
-#   Horizontally: `select-layout even-horizontal`, or `C-a M-1`
-#   Vertically:   `select-layout even-vertical`, or `C-a M-2`
+################################################################################
+# Notes about tmux usage #######################################################
+################################################################################
 
-########## CONFIGURATION ##########
+# Equally balance panes in current window:
+#   Horizontally: `C-a : select-layout even-horizontal`, or `C-a M-1`
+#   Vertically:   `C-a : select-layout even-vertical`, or `C-a M-2`
+#
+# Because mouse mode is enabled, panes can also be resized with a mouse click.
+
+################################################################################
+# Configuration ################################################################
+################################################################################
 
 # TODO document what this is for
 set-option -g default-terminal "xterm-256color"
@@ -16,15 +23,15 @@ setw -g pane-base-index 1
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
 set-option -g prefix C-a
-# 'C-a' + 'C-a' to use 'C-a' (e.g. inside emacs)
+# 'C-a' + 'C-a' to use 'C-a' (e.g. necessary to use shortcut inside emacs)
 bind-key C-a send-prefix
 
 # create a new window with C-c; default to home directory
 bind c new-window -c "~"
 
 # split panes using | and -; new pane defaults to current directory
-bind | split-window -h -c "#{pane_current_path}" \; display-message "split a new vertical pane"
-bind - split-window -v -c "#{pane_current_path}" \; display-message "split a new horizontal pane"
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # reload config file
 bind r source-file ~/.tmux.conf \; display-message "reloaded .tmux.conf"
@@ -45,7 +52,29 @@ bind-key Right swap-window -d -t +1
 # Make messages appear for 1 second
 set-option -g display-time 1000
 
-### <List of plugins>
+# Renumber windows when one is closed (source: https://stackoverflow.com/questions/8469612/how-do-i-make-tmux-reorder-windows-when-one-is-deleted
+set-option -g renumber-windows on
+
+# Pane scrollback buffer size (https://stackoverflow.com/questions/18760281/how-to-increase-scrollback-buffer-size-in-tmux)
+set-option -g history-limit 10000
+
+## Active pane configuration. See:
+##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
+##   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
+# set active-inactive window styles
+# set -g window-style fg=colour247,bg=colour236
+# set -g window-active-style fg=default,bg=colour234
+# set -g pane-border-style fg=colour238,bg=default
+# set -g pane-active-border-style fg=yellow,bg=default
+
+# set -g window-style fg=default,bg=default
+# set -g window-active-style fg=default,bg=default
+# set -g pane-border-style fg=default,bg=default
+# set -g pane-active-border-style fg=default,bg=default
+
+################################################################################
+# Plugins ######################################################################
+################################################################################
 
 # Tmux Plugin Manager: https://github.com/tmux-plugins/tpm
 # C-a + I - install plugins
@@ -63,7 +92,6 @@ set -g @plugin 'seebi/tmux-colors-solarized'
 # different themes are '256', 'dark', 'light', 'base16'
 set -g @colors-solarized 'dark'
 
-### </List of plugins>
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+# Initialize TMUX plugin manager
 run -b '~/.tmux/plugins/tpm/tpm'
+# NOTE: keep this line above ^^ at the very bottom of tmux.conf
