Add `conf-space` mode to `tmux` explicitly.
Source:
- https://doc.endlessparentheses.com/Fun/conf-space-mode.html
- https://github.com/github/linguist/blob/master/docs/overrides.md#using-emacs-or-vim-modelines

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,14 @@
+# -*- mode: conf-mode; -*- 
 ################################################################################
 # Notes about tmux usage #######################################################
 ################################################################################
-
+# 
 # Equally balance panes in current window:
 #   Horizontally: `C-a : select-layout even-horizontal`, or `C-a M-1`
 #   Vertically:   `C-a : select-layout even-vertical`, or `C-a M-2`
 #
 # Because mouse mode is enabled, panes can also be resized with a mouse click.
-
+#
 ################################################################################
 # Configuration ################################################################
 ################################################################################
