Add binding to clear `tmux` scrollback buffer.

--- a/tmux.conf
+++ b/tmux.conf
@@ -35,7 +35,7 @@ bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # reload config file
-bind r source-file ~/.tmux.conf \; display-message "reloaded .tmux.conf"
+bind r source-file ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
 
 # Enable mouse mode (tmux 2.1 and above).
 set -g mouse on
@@ -50,14 +50,18 @@ set -g status-left-length 50
 bind-key Left swap-window -d -t -1
 bind-key Right swap-window -d -t +1
 
-# Make messages appear for 1 second
-set-option -g display-time 1000
+# Make messages appear for 3 seconds
+set-option -g display-time 3000
 
 # Renumber windows when one is closed (source: https://stackoverflow.com/questions/8469612/how-do-i-make-tmux-reorder-windows-when-one-is-deleted
 set-option -g renumber-windows on
 
 # Pane scrollback buffer size (https://stackoverflow.com/questions/18760281/how-to-increase-scrollback-buffer-size-in-tmux)
 set-option -g history-limit 10000
+
+# Clear tmux scrollback buffer with C-k (`-n` means no need for C-a)
+# https://stackoverflow.com/questions/10543684/how-do-i-clear-the-scrollback-buffer-in-tmux
+bind -n C-k clear-history \; display-message "Cleared tmux scrollback buffer"
 
 ## Active pane configuration. See:
 ##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
