Docstring for `tmux` `C-k` usage.

--- a/tmux.conf
+++ b/tmux.conf
@@ -61,6 +61,9 @@ set-option -g history-limit 10000
 
 # Clear tmux scrollback buffer with C-k (`-n` means no need for C-a)
 # https://stackoverflow.com/questions/10543684/how-do-i-clear-the-scrollback-buffer-in-tmux
+#
+# A sample flow could then be C-l (terminal-dependent, essentially runs `clear`)
+# followed by C-k (tmux-specific).
 bind -n C-k clear-history \; display-message "Cleared tmux scrollback buffer"
 
 ## Active pane configuration. See:
