scrollback limit to 50k; `C-t` to create new window; misc comment updates

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,13 +1,19 @@
 # -*- mode: conf-mode; -*- 
 ################################################################################
-# Notes about tmux usage #######################################################
+# Notes ########################################################################
 ################################################################################
-# 
+#
+# Usage:
+#
 # Equally balance panes in current window:
 #   Horizontally: `C-a : select-layout even-horizontal`, or `C-a M-1`
 #   Vertically:   `C-a : select-layout even-vertical`, or `C-a M-2`
 #
 # Because mouse mode is enabled, panes can also be resized with a mouse click.
+#
+# Other notes:
+#   - `bind` & `bind-key` are the same thing (https://superuser.com/a/582069/1697355)
+#   - `-n` flag to `bind` means prefix ('C-a') is not required
 #
 ################################################################################
 # Configuration ################################################################
@@ -27,8 +33,9 @@ set-option -g prefix C-a
 # 'C-a' + 'C-a' to use 'C-a' (e.g. necessary to use shortcut inside emacs)
 bind-key C-a send-prefix
 
-# create a new window with C-c; default to home directory
-bind c new-window -c "~"
+# create a new window with C-a C-c or C-t; default to home directory
+bind c new-window -c "~" \; display-message "Consider using C-t to create a new window"
+bind -n C-t new-window -c "~"
 
 # split panes using | and -; new pane defaults to current directory
 bind | split-window -h -c "#{pane_current_path}"
@@ -57,7 +64,7 @@ set-option -g display-time 3000
 set-option -g renumber-windows on
 
 # Pane scrollback buffer size (https://stackoverflow.com/questions/18760281/how-to-increase-scrollback-buffer-size-in-tmux)
-set-option -g history-limit 10000
+set-option -g history-limit 50000
 
 # Clear tmux scrollback buffer with C-k (`-n` means no need for C-a)
 # https://stackoverflow.com/questions/10543684/how-do-i-clear-the-scrollback-buffer-in-tmux
