`tmux.conf` fix `set` usage, address comment TODO

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,14 +14,16 @@
 # Other notes:
 #   - `bind` & `bind-key` are the same thing (https://superuser.com/a/582069/1697355)
 #   - `-n` flag to `bind` means prefix ('C-a') is not required
+#   - `set` is an alias for `set-option`, so prefer using `set`
 #
 ################################################################################
 # Configuration ################################################################
 ################################################################################
 
-# TODO document what this is for
-set-option -g default-terminal "xterm-256color"
-set-window-option -g xterm-keys on
+# Set terminal emulator to xterm-256color, & enable sending xterm-style key
+# sequences in tmux windows.
+set -g default-terminal "xterm-256color"
+set -g xterm-keys on
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
@@ -29,7 +31,7 @@ setw -g pane-base-index 1
 
 # remap prefix from 'C-b' to 'C-a'
 unbind C-b
-set-option -g prefix C-a
+set -g prefix C-a
 # 'C-a' + 'C-a' to use 'C-a' (e.g. necessary to use shortcut inside emacs)
 bind-key C-a send-prefix
 
@@ -48,7 +50,7 @@ bind r source-file ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
 set -g mouse on
 
 # don't rename windows automatically
-set-option -g allow-rename off
+set -g allow-rename off
 
 # set the max length of the right component of the status bar (default 10).
 set -g status-left-length 50
@@ -58,13 +60,13 @@ bind-key Left swap-window -d -t -1
 bind-key Right swap-window -d -t +1
 
 # Make messages appear for 3 seconds
-set-option -g display-time 3000
+set -g display-time 3000
 
 # Renumber windows when one is closed (source: https://stackoverflow.com/questions/8469612/how-do-i-make-tmux-reorder-windows-when-one-is-deleted
-set-option -g renumber-windows on
+set -g renumber-windows on
 
 # Pane scrollback buffer size (https://stackoverflow.com/questions/18760281/how-to-increase-scrollback-buffer-size-in-tmux)
-set-option -g history-limit 50000
+set -g history-limit 50000
 
 # Clear tmux scrollback buffer with C-k (`-n` means no need for C-a)
 # https://stackoverflow.com/questions/10543684/how-do-i-clear-the-scrollback-buffer-in-tmux
