add default `tmux-powerlinerc` configuration
see https://github.com/erikw/tmux-powerline/#installation for how this file was generated.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
     ~/.tmux.conf: tmux.conf
+    ~/.tmux-powerlinerc: tmux-powerlinerc
     ~/.zprofile: zprofile
     ~/.zshrc: zshrc
 
