--- a/tmux.conf
+++ b/tmux.conf
@@ -52,9 +52,6 @@ set -g mouse on
 # don't rename windows automatically
 set -g allow-rename off
 
-# set the max length of the right component of the status bar (default 10).
-set -g status-left-length 50
-
 # allow re-ordering of tmux windows (source: https://superuser.com/questions/343572/how-do-i-reorder-tmux-windows)
 bind-key Left swap-window -d -t -1
 bind-key Right swap-window -d -t +1
@@ -108,6 +105,9 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'seebi/tmux-colors-solarized'
 # different themes are '256', 'dark', 'light', 'base16'
 set -g @colors-solarized 'dark'
+
+# https://github.com/erikw/tmux-powerline
+set -g @plugin 'erikw/tmux-powerline'
 
 # Initialize TMUX plugin manager
 run -b '~/.tmux/plugins/tpm/tpm'
