--- a/tmux.conf
+++ b/tmux.conf
@@ -106,7 +106,10 @@ set -g @plugin 'seebi/tmux-colors-solarized'
 # different themes are '256', 'dark', 'light', 'base16'
 set -g @colors-solarized 'dark'
 
-# https://github.com/erikw/tmux-powerline
+# tmux-powerline: https://github.com/erikw/tmux-powerline
+# note that powerline's config is in a separate file, `./tmux-powerlinerc`,
+# & custom themes are in `./tmux-powerline/themes`. See github README for more
+# details about how these were generated.
 set -g @plugin 'erikw/tmux-powerline'
 
 # Initialize TMUX plugin manager
