--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dotbot"]
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
+[submodule "copilot.el"]
+	path = copilot.el
+	url = https://github.com/zerolfx/copilot.el
