moved all `zsh` related configs into `zsh/`.
had to run `./install` after moving files around to fix symlinks.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,8 +9,8 @@
     ~/.gitconfig: gitconfig
     ~/.tmux.conf: tmux.conf
     ~/.tmux-powerlinerc: tmux-powerlinerc
-    ~/.zprofile: zprofile
-    ~/.zshrc: zshrc
+    ~/.zprofile: zsh/zprofile
+    ~/.zshrc: zsh/zshrc
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
