moved all `tmux` related configs into `tmux/`.
had to run `./install` after moving files around to fix symlinks.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,8 +7,8 @@
 - link:
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
-    ~/.tmux.conf: tmux.conf
-    ~/.tmux-powerlinerc: tmux-powerlinerc
+    ~/.tmux.conf: tmux/tmux.conf
+    ~/.tmux-powerlinerc: tmux/tmux-powerlinerc
     ~/.zprofile: zsh/zprofile
     ~/.zshrc: zsh/zshrc
 
