`tmux.conf`: unbind time mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -72,6 +72,9 @@ set -g history-limit 50000
 # followed by C-k (tmux-specific).
 bind -n C-k clear-history \; display-message "Cleared tmux scrollback buffer"
 
+# Unbind default time mode
+unbind t
+
 ## Active pane configuration. See:
 ##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
 ##   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
