rename `iterm2/`->`iterm2-config/` & link to `~` through `install`

--- a/iterm2-config/com.googlecode.iterm2.plist
+++ b/iterm2-config/com.googlecode.iterm2.plist
@@ -626,6 +626,12 @@
 			<string>/Users/izzyg</string>
 		</dict>
 	</array>
+	<key>OpenArrangementAtStartup</key>
+	<false/>
+	<key>OpenBookmark</key>
+	<false/>
+	<key>OpenNoWindowsAtStartup</key>
+	<false/>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
