--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
+    ~/.iterm2-config: iterm2-config
     ~/.tmux.conf: tmux/tmux.conf
     ~/.tmux-powerlinerc: tmux/tmux-powerlinerc
     ~/.zprofile: zsh/zprofile
