update `tmux-powerline` config location, & some settings
per [these new changes](https://github.com/erikw/tmux-powerline/commit/ebd28233b36b552a8d40e0f267d217ae39b5f1d8#) in the `tmux-powerline` project, usage of `.tmux-powerlinerc` is deprecated, which broke my `tmux` status bar after updating packages via `tpm`. changes here are to fix this.

also updated to remove `vcs_branch` & `pwd` segments from left & right parts of status bar

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,7 +9,7 @@
     ~/.gitconfig: gitconfig
     ~/.iterm2-config: iterm2-config
     ~/.tmux.conf: tmux/tmux.conf
-    ~/.tmux-powerlinerc: tmux/tmux-powerlinerc
+    ~/.config/tmux-powerline/config.sh: tmux/tmux-powerline/config.sh
     ~/.zprofile: zsh/zprofile
     ~/.zshrc: zsh/zshrc
 
