--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -35,9 +35,13 @@ set -g prefix C-a
 # 'C-a' + 'C-a' to use 'C-a' (e.g. necessary to use shortcut inside emacs)
 bind-key C-a send-prefix
 
-# create a new window with C-a C-c or C-t; default to home directory
-bind c new-window -c "~" \; display-message "Consider using C-t to create a new window"
-bind -n C-t new-window -c "~"
+# create a new window with C-a C-c or C-t; default to home directory, & with
+# empty name
+bind c new-window -c "~" -n "" \; display-message "Consider using C-t to create a new window"
+bind -n C-t new-window -c "~" -n ""
+
+# close a window with C-w
+bind -n C-w kill-window
 
 # split panes using | and -; new pane defaults to current directory
 bind | split-window -h -c "#{pane_current_path}"
