--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
 - link:
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
+    ~/.hushlogin: hushlogin
     ~/.iterm2-config: iterm2-config
     ~/.tmux.conf: tmux/tmux.conf
     ~/.config/tmux-powerline: tmux/tmux-powerline
