add `tmux` aliases to `zshrc` & add `confirm-before` usage to shortcuts in `tmux.conf`

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -40,15 +40,15 @@ bind-key C-a send-prefix
 bind c new-window -c "~" -n "" \; display-message "Consider using C-t to create a new window"
 bind -n C-t new-window -c "~" -n ""
 
-# close a window with C-w
-bind -n C-w kill-window
+# close a window with C-w (with confirm-before)
+bind -n C-w confirm-before -y -p "Close window? (Y/n)" "kill-window"
 
 # split panes using | and -; new pane defaults to current directory
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-# reload config file
-bind r source-file ~/.tmux.conf \; display-message "Reloaded .tmux.conf"
+# reload config file (with confirm-before)
+bind r confirm-before -y -p "Reload `~/.tmux.conf`? (Y/n)" "source-file ~/.tmux.conf ; display-message \"Reloaded .tmux.conf\""
 
 # Enable mouse mode (tmux 2.1 and above).
 set -g mouse on
@@ -106,6 +106,8 @@ set -g @plugin 'tmux-plugins/tpm'
 # github.com/tmux-plugins/tmux-resurrect
 # C-a + C-s - save current session
 # C-a + C-r - restore saved session
+# TODO consider contributing to this project by implementing optional
+# `confirm-before` usage for these shortcuts.
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # https://github.com/seebi/tmux-colors-solarized
