--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -110,10 +110,12 @@ set -g @plugin 'tmux-plugins/tpm'
 # `confirm-before` usage for these shortcuts.
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
+# No longer using this plugin since UI is being customized through
+# tmux-powerline.
 # https://github.com/seebi/tmux-colors-solarized
-set -g @plugin 'seebi/tmux-colors-solarized'
+# set -g @plugin 'seebi/tmux-colors-solarized'
 # different themes are '256', 'dark', 'light', 'base16'
-set -g @colors-solarized 'dark'
+# set -g @colors-solarized 'dark'
 
 # tmux-powerline: https://github.com/erikw/tmux-powerline
 # note that powerline's config is in a separate file, `./tmux-powerlinerc`,
