--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,7 +41,8 @@ bind c new-window -c "~" -n "" \; display-message "Consider using C-t to create 
 bind -n C-t new-window -c "~" -n ""
 
 # close a window with C-w (with confirm-before)
-bind -n C-w confirm-before -y -p "Close window? (Y/n)" "kill-window"
+# note: am not using -n flag because this would conflict with emacs cut
+bind C-w confirm-before -y -p "Close window? (Y/n)" "kill-window"
 
 # split panes using | and -; new pane defaults to current directory
 bind | split-window -h -c "#{pane_current_path}"
@@ -57,8 +58,11 @@ set -g mouse on
 set -g allow-rename off
 
 # allow re-ordering of tmux windows (source: https://superuser.com/questions/343572/how-do-i-reorder-tmux-windows)
-bind-key Left swap-window -d -t -1
-bind-key Right swap-window -d -t +1
+bind Left swap-window -d -t -1
+bind Right swap-window -d -t +1
+# move through windows easily with arrow keys
+bind -n Left previous-window
+bind -n Right next-window
 
 # Make messages appear for 3 seconds
 set -g display-time 3000
