`tmux`: bind `q` to no-op to gracefully exit prefix mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,6 +51,11 @@ bind - split-window -v -c "#{pane_current_path}"
 # reload config file (with confirm-before)
 bind r confirm-before -y -p "Reload `~/.tmux.conf`? (Y/n)" "source-file ~/.tmux.conf ; display-message \"Reloaded .tmux.conf\""
 
+# By default 'C-b'-q is used to show pane numbers, but this is not very useful,
+# so I'm remapping it to what is essentially a no-op to make it easy to "exit"
+# the prefix context.
+bind q refresh-client
+
 # Enable mouse mode (tmux 2.1 and above).
 set -g mouse on
 
