--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -112,9 +112,9 @@ set -g @plugin 'tmux-plugins/tpm'
 # github.com/tmux-plugins/tmux-resurrect
 # C-a + C-s - save current session
 # C-a + C-r - restore saved session
-# TODO consider contributing to this project by implementing optional
-# `confirm-before` usage for these shortcuts.
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-confirm-save "on" # {on, off}
+set -g @resurrect-confirm-restore "on" # {on, off}
 
 # No longer using this plugin since UI is being customized through
 # tmux-powerline.
