--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -124,9 +124,10 @@ set -g @resurrect-confirm-restore "on" # {on, off}
 # set -g @colors-solarized 'dark'
 
 # tmux-powerline: https://github.com/erikw/tmux-powerline
-# note that powerline's config is in a separate file, `./tmux-powerlinerc`,
-# & custom themes are in `./tmux-powerline/themes`. See github README for more
-# details about how these were generated.
+# note that powerline's config is in a separate file,
+# `./tmux-powerline/config.sh`, & custom themes are in
+# `./tmux-powerline/themes`. See github README for more details about how these
+# were generated.
 set -g @plugin 'erikw/tmux-powerline'
 
 # Initialize TMUX plugin manager
