--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -2,9 +2,12 @@
     link:
       relink: true
 
-- clean: ['~']
+- clean: ["~"]
 
 - link:
+    ~/Library/KeyBindings/DefaultKeyBinding.dict:
+      create: true # create necessary dirs if they don't exist
+      path: DefaultKeyBinding.dict
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
     ~/.hushlogin: hushlogin
@@ -16,4 +19,4 @@
     ~/.zshrc: zsh/zshrc
 
 - shell:
-  - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init --recursive, Installing submodules]
