`tmux`: fix clipboard copy-pasting with emacs macros

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -85,6 +85,12 @@ bind -n C-k clear-history \; display-message "Cleared tmux scrollback buffer"
 # Unbind default time mode
 unbind t
 
+# Clipboard copy-paste settings to ensure the following
+# - highlighted text in copy-mode copied with Option-W will be pasteable with
+#   both C-y & Cmd-V
+set-option -g set-clipboard on
+bind -n C-y run-shell "tmux show-buffer | pbcopy && pbpaste | tmux load-buffer -" \; paste-buffer
+
 ## Active pane configuration. See:
 ##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
 ##   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
