`tmux`: update usage notes; remove no longer used plugin (solarized)

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,14 @@
 # Notes ########################################################################
 ################################################################################
 #
-# Usage:
+# General Usage Notes:
+#
+# `C-a ?` will list out all default key bindings, but importantly will *not*
+# include bindings made in this file. To see all bindings, run
+#   - `tmux list-keys | less` to show all key bindings
+#   - `tmux list-keys -T {table_name} | less` to show key bindings in a specific
+#      table. Key bindings are grouped into tables such as `prefix`, `root`,
+#      `copy-mode`, & more (look online).
 #
 # Equally balance panes in current window:
 #   Horizontally: `C-a : select-layout even-horizontal`, or `C-a M-1`
@@ -121,13 +128,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @resurrect-confirm-save "on" # {on, off}
 set -g @resurrect-confirm-restore "on" # {on, off}
-
-# No longer using this plugin since UI is being customized through
-# tmux-powerline.
-# https://github.com/seebi/tmux-colors-solarized
-# set -g @plugin 'seebi/tmux-colors-solarized'
-# different themes are '256', 'dark', 'light', 'base16'
-# set -g @colors-solarized 'dark'
 
 # tmux-powerline: https://github.com/erikw/tmux-powerline
 # note that powerline's config is in a separate file,
