`zshrc`/`tmux`: fix broken copy-pasting.
this was actually a tedious rabbit hole to go down to try to fix broken
copy-paste behavior. the tl;dr is that I'm remapping C-y at the zsh-level (see
`zshrc` changes) instead of at the tmux-level to paste content inside the
system's clipboard. still not implemented for linux, probs a one-liner but I'll
deal with that when needed.

if you want to see full context, see the last message in the ChatGPT thread
titled "Tmux Copy Paste Debug". as of writing this, it's inside the "terminal
help" project (i.e., folder inside ChatGPT). I would include a link here, but
for some reason share links aren't yet implemented for threads inside project
folders.

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -92,11 +92,10 @@ bind -n C-k clear-history \; display-message "Cleared tmux scrollback buffer"
 # Unbind default time mode
 unbind t
 
-# Clipboard copy-paste settings to ensure the following
-# - highlighted text in copy-mode copied with Option-W will be pasteable with
-#   both C-y & Cmd-V
+# See [1] for full details, but this essentially makes it so that text copied
+# from tmux's copy mode or with the mouse is sync'd with the system clipboard.
+# [1] https://github.com/tmux/tmux/wiki/Clipboard
 set-option -g set-clipboard on
-bind -n C-y run-shell "tmux show-buffer | pbcopy && pbpaste | tmux load-buffer -" \; paste-buffer
 
 ## Active pane configuration. See:
 ##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
