--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
     ~/.gitconfig: gitconfig
     ~/.hushlogin: hushlogin
     ~/.iterm2-config: iterm2-config
+    ~/.lesskey: lesskey
     ~/.tidyrc: tidyrc
     ~/.tmux.conf: tmux/tmux.conf
     ~/.config/tmux-powerline: tmux/tmux-powerline
