--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.hushlogin: hushlogin
     ~/.iterm2-config: iterm2-config
     ~/.lesskey: lesskey
+    ~/.npmrc: npmrc
     ~/.tidyrc: tidyrc
     ~/.tmux.conf: tmux/tmux.conf
     ~/.config/tmux-powerline: tmux/tmux-powerline
