`tmux` don't exit copy-mode with M-w

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -97,6 +97,10 @@ unbind t
 # [1] https://github.com/tmux/tmux/wiki/Clipboard
 set-option -g set-clipboard on
 
+# Make it so that copying with M-w in copy-mode won't exit copy-mode; useful
+# for multi copy needs
+bind -T copy-mode M-w send -X copy-selection
+
 ## Active pane configuration. See:
 ##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
 ##   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
