add firefox settings to sync
this is a little more involved than other dotfiles, so adding a README inside firefox/. will test if this works as expected on other machines.

also addressed TODO in install script to conditionally set dotfiles depending on OS. mostly followed example presented in dotbot README

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,10 +5,29 @@
 - clean: ["~"]
 
 - link:
-    # TODO figure out how to only link this file on macOS & not on linux
+    # Some usage notes. See [1] for more details.
+    # [1] https://github.com/anishathalye/dotbot/blob/master/README.md
+    # - if: <condition> will only link the file if the condition is true
+    # - create: true will create the target directory if it doesn't exist
+    # - force: true will overwrite the target file if it already exists
+
+    # Only link these files on macOS
     ~/Library/KeyBindings/DefaultKeyBinding.dict:
-      create: true # create necessary dirs if they don't exist
+      if: "[ `uname` = Darwin ]"
+      create: true
       path: DefaultKeyBinding.dict
+    ~/Library/Application Support/Firefox/izzys-firefox-profile/chrome:
+      if: "[ `uname` = Darwin ]"
+      create: true
+      force: true
+      path: firefox/chrome
+    ~/Library/Application Support/Firefox/profiles.ini:
+      if: "[ `uname` = Darwin ]"
+      create: true
+      force: true
+      path: firefox/profiles.ini
+
+    # Files that are OS-independent
     ~/.emacs: emacs
     ~/.gitconfig: gitconfig
     ~/.hushlogin: hushlogin
