--- a/iterm2-config/com.googlecode.iterm2.plist
+++ b/iterm2-config/com.googlecode.iterm2.plist
@@ -385,7 +385,7 @@
 			<key>Show Mark Indicators</key>
 			<false/>
 			<key>Silence Bell</key>
-			<false/>
+			<true/>
 			<key>Sync Title</key>
 			<false/>
 			<key>Tags</key>
