--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -44,6 +44,7 @@
     ~/.tmux.conf: tmux/tmux.conf
     ~/.config/tmux-powerline: tmux/tmux-powerline
     ~/.zprofile: zsh/zprofile
+    ~/.zshenv: zsh/zshenv
     ~/.zshrc: zsh/zshrc
 
 - shell:
