attempt to fix green stripe bug in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -27,10 +27,9 @@
 # Configuration ################################################################
 ################################################################################
 
-# Set terminal emulator to xterm-256color, & enable sending xterm-style key
-# sequences in tmux windows.
-set -g default-terminal "xterm-256color"
-set -g xterm-keys on
+# Use “screen-256color-bce” (no BCE) to force tmux to repaint column 0 on scroll
+# & avoid the green‐stripe background‑color-erase bug. See TODO add link
+set -g default-terminal "screen-256color-bce"
 
 # Start windows and panes at 1, not 0
 set -g base-index 1
