--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,7 +28,8 @@
 ################################################################################
 
 # Use “screen-256color-bce” (no BCE) to force tmux to repaint column 0 on scroll
-# & avoid the green‐stripe background‑color-erase bug. See TODO add link
+# & avoid the green‐stripe background‑color-erase bug.
+# See: https://github.com/izzygomez/dotfiles/pull/2
 set -g default-terminal "screen-256color-bce"
 
 # Start windows and panes at 1, not 0
