`tmux`: add usage info for rotating panes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,6 +5,10 @@
 #
 # General Usage Notes:
 #
+# `C-a o` will rotate to the next pane; `C-a ;` will rotate to *last* pane,
+# not necessarily previous pane.
+#   - Might consider implementing a solution in the future, but fine for now
+#
 # `C-a ?` will list out all default key bindings, but importantly will *not*
 # include bindings made in this file. To see all bindings, run
 #   - `tmux list-keys | less` to show all key bindings
