`tmux`: remove `confirm-before` when closing window; add `confirm-before` usage notes

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -20,6 +20,11 @@
 #   Horizontally: `C-a : select-layout even-horizontal`, or `C-a M-1`
 #   Vertically:   `C-a : select-layout even-vertical`, or `C-a M-2`
 #
+# Use `confirm-before` to confirm commands before running them:
+#     `bind <key> confirm-before -y -p "Run command? (Y/n)"  "<command>"`
+# where -y changes default behavior to run the command once Enter is pressed,
+# & -p allows you to set the prompt to display
+#
 # Because mouse mode is enabled, panes can also be resized with a mouse click.
 #
 # Other notes:
@@ -51,9 +56,9 @@ bind-key C-a send-prefix
 bind c new-window -c "~" -n "" \; display-message "Consider using C-t to create a new window"
 bind -n C-t new-window -c "~" -n ""
 
-# close a window with C-w (with confirm-before)
-# note: am not using -n flag because this would conflict with emacs cut
-bind C-w confirm-before -y -p "Close window? (Y/n)" "kill-window"
+# close a window with C-w
+# note: am not using -n flag on bind because this would conflict with emacs cut
+bind C-w "kill-window"
 
 # split panes using | and -; new pane defaults to current directory
 bind | split-window -h -c "#{pane_current_path}"
