`tmux`: modify active tmux pane border & background colors

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -110,19 +110,15 @@ set-option -g set-clipboard on
 # for multi copy needs
 bind -T copy-mode M-w send -X copy-selection
 
-## Active pane configuration. See:
+## Active pane configuration.
+## For some inspo, see:
 ##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
 ##   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
-# set active-inactive window styles
-# set -g window-style fg=colour247,bg=colour236
-# set -g window-active-style fg=default,bg=colour234
-# set -g pane-border-style fg=colour238,bg=default
-# set -g pane-active-border-style fg=yellow,bg=default
-
-# set -g window-style fg=default,bg=default
-# set -g window-active-style fg=default,bg=default
-# set -g pane-border-style fg=default,bg=default
-# set -g pane-active-border-style fg=default,bg=default
+## Run `~/.tmux/plugins/tmux-powerline/color_palette.sh` to see color palette in terminal.
+set -g pane-border-style fg=color235 # inactive
+# matching fg=color136 here with foreground color set in `dotfiles/tmux/tmux-powerline/themes/izzy-default.sh`
+set -g pane-active-border-style fg=color136,bg=colour234
+set -g window-active-style fg=default,bg=colour234
 
 ################################################################################
 # Plugins ######################################################################
