`tmux`: standardize on hex color codes, modify pane & border colors (active black, inactive #121212)x

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -110,15 +110,21 @@ set-option -g set-clipboard on
 # for multi copy needs
 bind -T copy-mode M-w send -X copy-selection
 
-## Active pane configuration.
-## For some inspo, see:
-##   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
-##   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
-## Run `~/.tmux/plugins/tmux-powerline/color_palette.sh` to see color palette in terminal.
-set -g pane-border-style fg=color235 # inactive
-# matching fg=color136 here with foreground color set in `dotfiles/tmux/tmux-powerline/themes/izzy-default.sh`
-set -g pane-active-border-style fg=color136,bg=colour234
-set -g window-active-style fg=default,bg=colour234
+# Pane & border configuration.
+# For some inspo, see:
+#   - https://tech.serhatteker.com/post/2019-06/tmux-focus/)
+#   - https://github.com/tmux/tmux/wiki/FAQ#how-do-i-translate--fg--bg-and--attr-options-into--style-options
+# Colors:
+#   - Prefer to use hex color codes or direct color names, not xterm numbers (e.g. color234)
+#   - Run `~/.tmux/plugins/tmux-powerline/color_palette.sh` to see color palette in terminal.
+#   - See cheat sheet here: https://www.ditig.com/256-colors-cheat-sheet
+# Notes:
+#   - matching foreground color on borders to `TMUX_POWERLINE_DEFAULT_FOREGROUND_COLOR` in `dotfiles/tmux/tmux-powerline/themes/izzy-default.sh`
+#   - matching background color on inactive pane & border to `TMUX_POWERLINE_DEFAULT_BACKGROUND_COLOR`
+set -g window-active-style 'fg=default,bg=black' # active pane
+set -g window-style 'fg=default,bg=#121212' # inactive pane
+set -g pane-active-border-style 'fg=#af8700,bg=black' # active border
+set -g pane-border-style 'fg=#af8700,bg=#121212' # inactive border
 
 ################################################################################
 # Plugins ######################################################################
